Adding another connection string to test development vs. production releases.

--- a/MVC_EF_Start/appsettings.Development.json
+++ b/MVC_EF_Start/appsettings.Development.json
@@ -6,5 +6,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "IEXTrading": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=IEXTradingDev;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
 }
